// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Complex Integration Tests - Sprint 01 > should generate complete customer-order system 1`] = `
"
-- ============================================
-- Table for entity: Customer
-- Generated by CMagic v1.0
-- ============================================
CREATE TABLE CUSTOMERP (
    ID INTEGER NOT NULL,
    CUSTOMERCODE VARCHAR(15) NOT NULL,
    COMPANYNAME VARCHAR(100) NOT NULL,
    TRADENAME VARCHAR(100),
    ADDRESS VARCHAR(256) NOT NULL,
    CONTACT VARCHAR(256),
    STATUS VARCHAR(256) DEFAULT 'PROSPECT',
    CREDITLIMIT DECIMAL(15,2) DEFAULT 0,
    PAYMENTTERMS INTEGER DEFAULT 30,
    ISVIP CHAR(1) DEFAULT 'N',
    CREATEDDATE DATE NOT NULL,
    LASTORDERDATE DATE,
    
    -- Technical metadata
    CREATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (ID),
    UNIQUE (CUSTOMERCODE),
    CHECK (ISVIP IN ('Y', 'N'))
);

-- Indexes for frequent searches
CREATE UNIQUE INDEX CUSTOMERP_CUSTOMERCODE_IDX ON CUSTOMERP (CUSTOMERCODE);

-- Comments
COMMENT ON TABLE CUSTOMERP IS 'Table for Customer - Generated by CMagic';
COMMENT ON COLUMN CUSTOMERP.ID IS 'id field';
COMMENT ON COLUMN CUSTOMERP.CUSTOMERCODE IS 'customerCode field';
COMMENT ON COLUMN CUSTOMERP.COMPANYNAME IS 'companyName field';
COMMENT ON COLUMN CUSTOMERP.TRADENAME IS 'tradeName field';
COMMENT ON COLUMN CUSTOMERP.ADDRESS IS 'address field';
COMMENT ON COLUMN CUSTOMERP.CONTACT IS 'contact field';
COMMENT ON COLUMN CUSTOMERP.STATUS IS 'status field';
COMMENT ON COLUMN CUSTOMERP.CREDITLIMIT IS 'creditLimit field';
COMMENT ON COLUMN CUSTOMERP.PAYMENTTERMS IS 'paymentTerms field';
COMMENT ON COLUMN CUSTOMERP.ISVIP IS 'isVip field';
COMMENT ON COLUMN CUSTOMERP.CREATEDDATE IS 'createdDate field';
COMMENT ON COLUMN CUSTOMERP.LASTORDERDATE IS 'lastOrderDate field';

-- ============================================
-- Table for entity: CustomerOrder
-- Generated by CMagic v1.0
-- ============================================
CREATE TABLE CUSTOMERORDERP (
    ID INTEGER NOT NULL,
    ORDERNUMBER VARCHAR(20) NOT NULL,
    CUSTOMERID INTEGER NOT NULL,
    STATUS VARCHAR(256) DEFAULT 'DRAFT',
    ORDERDATE DATE NOT NULL,
    REQUESTEDDELIVERYDATE DATE,
    CONFIRMEDDELIVERYDATE DATE,
    PAYMENTMETHOD VARCHAR(256) DEFAULT 'CREDIT_CARD',
    SUBTOTAL DECIMAL(15,2) DEFAULT 0,
    TAXAMOUNT DECIMAL(15,2) DEFAULT 0,
    TOTALAMOUNT DECIMAL(15,2) DEFAULT 0,
    NOTES VARCHAR(1000),
    ISRUSH CHAR(1) DEFAULT 'N',
    
    -- Technical metadata
    CREATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (ID),
    UNIQUE (ORDERNUMBER),
    CHECK (ISRUSH IN ('Y', 'N'))
);

-- Indexes for frequent searches
CREATE UNIQUE INDEX CUSTOMERORDERP_ORDERNUMBER_IDX ON CUSTOMERORDERP (ORDERNUMBER);

-- Comments
COMMENT ON TABLE CUSTOMERORDERP IS 'Table for CustomerOrder - Generated by CMagic';
COMMENT ON COLUMN CUSTOMERORDERP.ID IS 'id field';
COMMENT ON COLUMN CUSTOMERORDERP.ORDERNUMBER IS 'orderNumber field';
COMMENT ON COLUMN CUSTOMERORDERP.CUSTOMERID IS 'customerId field';
COMMENT ON COLUMN CUSTOMERORDERP.STATUS IS 'status field';
COMMENT ON COLUMN CUSTOMERORDERP.ORDERDATE IS 'orderDate field';
COMMENT ON COLUMN CUSTOMERORDERP.REQUESTEDDELIVERYDATE IS 'requestedDeliveryDate field';
COMMENT ON COLUMN CUSTOMERORDERP.CONFIRMEDDELIVERYDATE IS 'confirmedDeliveryDate field';
COMMENT ON COLUMN CUSTOMERORDERP.PAYMENTMETHOD IS 'paymentMethod field';
COMMENT ON COLUMN CUSTOMERORDERP.SUBTOTAL IS 'subtotal field';
COMMENT ON COLUMN CUSTOMERORDERP.TAXAMOUNT IS 'taxAmount field';
COMMENT ON COLUMN CUSTOMERORDERP.TOTALAMOUNT IS 'totalAmount field';
COMMENT ON COLUMN CUSTOMERORDERP.NOTES IS 'notes field';
COMMENT ON COLUMN CUSTOMERORDERP.ISRUSH IS 'isRush field';


-- ============================================
-- Foreign Key Constraints
-- ============================================

ALTER TABLE CUSTOMERORDERP ADD CONSTRAINT FK_CUSTOMERORDER_CUSTOMERID FOREIGN KEY (CUSTOMERID) REFERENCES CUSTOMERP (ID);
CREATE INDEX CUSTOMERORDERP_CUSTOMERID_IDX ON CUSTOMERORDERP (CUSTOMERID);

"
`;

exports[`Complex Integration Tests - Sprint 01 > should generate complete customer-order system 2`] = `
"**free
// ============================================
// customer headers - générée par cmagic v1.0
// source : test.cmagic  
// génération reproductible : aucune date volatile
// ============================================

/if defined(customer_h_defined)       
/eof                               
/endif                             
/define customer_h_defined  
/// ============================================
// includes standard
/// ============================================
/include 'cmagic.rpgleinc'
/include 'global.rpgleinc'
/include 'sqlstates.rpginc'
/include 'llist/llist_h.rpgle'
/include 'ckool.rpgleinc'

/// ========================================
// structures communes
/// ========================================

// structure address réutilisable
dcl-ds customer_address_t qualified template;
  street VARCHAR(100);
  city VARCHAR(50);
  postalcode VARCHAR(10);
  country VARCHAR(3) INZ('FR');
end-ds;

// structure contactinfo réutilisable
dcl-ds customer_contactinfo_t qualified template;
  email VARCHAR(100);
  phone VARCHAR(20);
  mobile VARCHAR(20);
end-ds;


// structure audit réutilisable
dcl-ds audit_t qualified template;
  createdat timestamp;
  createdby char(10);
  updatedat timestamp;
  updateby char(10);
end-ds;

/// ========================================
// constantes énumération
///========================================

dcl-enum customerstatus qualified;
  active 'active';
  inactive 'inactive';
  suspended 'suspended';
  prospect 'prospect';
end-enum;

dcl-enum orderstatus qualified;
  draft 'draft';
  pending 'pending';
  confirmed 'confirmed';
  shipped 'shipped';
  delivered 'delivered';
  cancelled 'cancelled';
  returned 'returned';
end-enum;

dcl-enum paymentmethod qualified;
  cash 'cash';
  credit_card 'credit_card';
  bank_transfer 'bank_transfer';
  check 'check';
end-enum;


///========================================
// structures entité
///========================================

///
// structure de base customer (données métier)
///
dcl-ds customer_t qualified template;
  id INT(10);
  customercode VARCHAR(15);
  companyname VARCHAR(100);
  tradename VARCHAR(100);
  address LIKEDS(customer_address_t);
  contact LIKEDS(customer_contactinfo_t);
  status VARCHAR(20) INZ('PROSPECT');
  creditlimit PACKED(15:2) INZ(0);
  paymentterms INT(10) INZ(30);
  isvip IND INZ('false');
  createddate DATE;
  lastorderdate DATE;
end-ds;

///
// structure pour clé primaire
///
dcl-ds customer_id_t qualified template;
  id INT(10);
end-ds;

///
// structure détaillée customer (avec métadonnées techniques)
///
dcl-ds customer_detail_t qualified template;
  // données métier héritées de customer_t
  detail likeds(customer_t);
  // métadonnées techniques
  audit likeds(audit_t);
end-ds;

// ========================================
// api publique - procédures exportées
// ========================================

///
// Liste des opératinons supportées
//
dcl-enum customer_listeAction qualified;
  creation 'create';
  modification 'update';
  suppression 'delete';
  consultation 'read';
end-enum;


// ========================================
"
`;

exports[`Complex Integration Tests - Sprint 01 > should generate complete customer-order system 3`] = `
"**free
// ============================================
// customerorder headers - générée par cmagic v1.0
// source : test.cmagic  
// génération reproductible : aucune date volatile
// ============================================

/if defined(customerorder_h_defined)       
/eof                               
/endif                             
/define customerorder_h_defined  
/// ============================================
// includes standard
/// ============================================
/include 'cmagic.rpgleinc'
/include 'global.rpgleinc'
/include 'sqlstates.rpginc'
/include 'llist/llist_h.rpgle'
/include 'ckool.rpgleinc'

/// ========================================
// structures communes
/// ========================================

// structure address réutilisable
dcl-ds customerorder_address_t qualified template;
  street VARCHAR(100);
  city VARCHAR(50);
  postalcode VARCHAR(10);
  country VARCHAR(3) INZ('FR');
end-ds;

// structure contactinfo réutilisable
dcl-ds customerorder_contactinfo_t qualified template;
  email VARCHAR(100);
  phone VARCHAR(20);
  mobile VARCHAR(20);
end-ds;


// structure audit réutilisable
dcl-ds audit_t qualified template;
  createdat timestamp;
  createdby char(10);
  updatedat timestamp;
  updateby char(10);
end-ds;

/// ========================================
// constantes énumération
///========================================

dcl-enum customerstatus qualified;
  active 'active';
  inactive 'inactive';
  suspended 'suspended';
  prospect 'prospect';
end-enum;

dcl-enum orderstatus qualified;
  draft 'draft';
  pending 'pending';
  confirmed 'confirmed';
  shipped 'shipped';
  delivered 'delivered';
  cancelled 'cancelled';
  returned 'returned';
end-enum;

dcl-enum paymentmethod qualified;
  cash 'cash';
  credit_card 'credit_card';
  bank_transfer 'bank_transfer';
  check 'check';
end-enum;


///========================================
// structures entité
///========================================

///
// structure de base customerorder (données métier)
///
dcl-ds customerorder_t qualified template;
  id INT(10);
  ordernumber VARCHAR(20);
  customerid INT(10);
  status VARCHAR(20) INZ('DRAFT');
  orderdate DATE;
  requesteddeliverydate DATE;
  confirmeddeliverydate DATE;
  paymentmethod VARCHAR(20) INZ('CREDIT_CARD');
  subtotal PACKED(15:2) INZ(0);
  taxamount PACKED(15:2) INZ(0);
  totalamount PACKED(15:2) INZ(0);
  notes VARCHAR(1000);
  isrush IND INZ('false');
end-ds;

///
// structure pour clé primaire
///
dcl-ds customerorder_id_t qualified template;
  id INT(10);
end-ds;

///
// structure détaillée customerorder (avec métadonnées techniques)
///
dcl-ds customerorder_detail_t qualified template;
  // données métier héritées de customerorder_t
  detail likeds(customerorder_t);
  // métadonnées techniques
  audit likeds(audit_t);
end-ds;

// ========================================
// api publique - procédures exportées
// ========================================

///
// Liste des opératinons supportées
//
dcl-enum customerorder_listeAction qualified;
  creation 'create';
  modification 'update';
  suppression 'delete';
  consultation 'read';
end-enum;


// ========================================
"
`;

exports[`DSL Validation and Error Handling - Sprint 01 > should handle boolean default values correctly 1`] = `
"
-- ============================================
-- Table for entity: BooleanTest
-- Generated by CMagic v1.0
-- ============================================
CREATE TABLE BOOLEANTESTP (
    ID INTEGER NOT NULL,
    ISACTIVE CHAR(1) DEFAULT 'Y',
    ISDELETED CHAR(1) DEFAULT 'N',
    ISOPTIONAL CHAR(1),
    
    -- Technical metadata
    CREATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (ID),
    CHECK (ISACTIVE IN ('Y', 'N')),
    CHECK (ISDELETED IN ('Y', 'N')),
    CHECK (ISOPTIONAL IN ('Y', 'N'))
);

-- Indexes for frequent searches

-- Comments
COMMENT ON TABLE BOOLEANTESTP IS 'Table for BooleanTest - Generated by CMagic';
COMMENT ON COLUMN BOOLEANTESTP.ID IS 'id field';
COMMENT ON COLUMN BOOLEANTESTP.ISACTIVE IS 'isActive field';
COMMENT ON COLUMN BOOLEANTESTP.ISDELETED IS 'isDeleted field';
COMMENT ON COLUMN BOOLEANTESTP.ISOPTIONAL IS 'isOptional field';


-- ============================================
-- Foreign Key Constraints
-- ============================================

"
`;

exports[`DSL Validation and Error Handling - Sprint 01 > should handle boolean default values correctly 2`] = `
"**free
// ============================================
// booleantest headers - générée par cmagic v1.0
// source : test.cmagic  
// génération reproductible : aucune date volatile
// ============================================

/if defined(booleantest_h_defined)       
/eof                               
/endif                             
/define booleantest_h_defined  
/// ============================================
// includes standard
/// ============================================
/include 'cmagic.rpgleinc'
/include 'global.rpgleinc'
/include 'sqlstates.rpginc'
/include 'llist/llist_h.rpgle'
/include 'ckool.rpgleinc'


// structure audit réutilisable
dcl-ds audit_t qualified template;
  createdat timestamp;
  createdby char(10);
  updatedat timestamp;
  updateby char(10);
end-ds;


///========================================
// structures entité
///========================================

///
// structure de base booleantest (données métier)
///
dcl-ds booleantest_t qualified template;
  id INT(10);
  isactive IND INZ('true');
  isdeleted IND INZ('false');
  isoptional IND INZ('N');
end-ds;

///
// structure pour clé primaire
///
dcl-ds booleantest_id_t qualified template;
  id INT(10);
end-ds;

///
// structure détaillée booleantest (avec métadonnées techniques)
///
dcl-ds booleantest_detail_t qualified template;
  // données métier héritées de booleantest_t
  detail likeds(booleantest_t);
  // métadonnées techniques
  audit likeds(audit_t);
end-ds;

// ========================================
// api publique - procédures exportées
// ========================================

///
// Liste des opératinons supportées
//
dcl-enum booleantest_listeAction qualified;
  creation 'create';
  modification 'update';
  suppression 'delete';
  consultation 'read';
end-enum;


// ========================================
"
`;

exports[`DSL Validation and Error Handling - Sprint 01 > should handle decimal precision edge cases 1`] = `
"
-- ============================================
-- Table for entity: PrecisionTest
-- Generated by CMagic v1.0
-- ============================================
CREATE TABLE PRECISIONTESTP (
    ID INTEGER NOT NULL,
    MONEY DECIMAL(15,2),
    PERCENTAGE DECIMAL(5,4),
    LARGENUMBER DECIMAL(20,0),
    
    -- Technical metadata
    CREATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (ID)
);

-- Indexes for frequent searches

-- Comments
COMMENT ON TABLE PRECISIONTESTP IS 'Table for PrecisionTest - Generated by CMagic';
COMMENT ON COLUMN PRECISIONTESTP.ID IS 'id field';
COMMENT ON COLUMN PRECISIONTESTP.MONEY IS 'money field';
COMMENT ON COLUMN PRECISIONTESTP.PERCENTAGE IS 'percentage field';
COMMENT ON COLUMN PRECISIONTESTP.LARGENUMBER IS 'largeNumber field';


-- ============================================
-- Foreign Key Constraints
-- ============================================

"
`;

exports[`DSL Validation and Error Handling - Sprint 01 > should handle decimal precision edge cases 2`] = `
"**free
// ============================================
// precisiontest headers - générée par cmagic v1.0
// source : test.cmagic  
// génération reproductible : aucune date volatile
// ============================================

/if defined(precisiontest_h_defined)       
/eof                               
/endif                             
/define precisiontest_h_defined  
/// ============================================
// includes standard
/// ============================================
/include 'cmagic.rpgleinc'
/include 'global.rpgleinc'
/include 'sqlstates.rpginc'
/include 'llist/llist_h.rpgle'
/include 'ckool.rpgleinc'


// structure audit réutilisable
dcl-ds audit_t qualified template;
  createdat timestamp;
  createdby char(10);
  updatedat timestamp;
  updateby char(10);
end-ds;


///========================================
// structures entité
///========================================

///
// structure de base precisiontest (données métier)
///
dcl-ds precisiontest_t qualified template;
  id INT(10);
  money PACKED(15:2);
  percentage PACKED(5:4);
  largenumber PACKED(20:0);
end-ds;

///
// structure pour clé primaire
///
dcl-ds precisiontest_id_t qualified template;
  id INT(10);
end-ds;

///
// structure détaillée precisiontest (avec métadonnées techniques)
///
dcl-ds precisiontest_detail_t qualified template;
  // données métier héritées de precisiontest_t
  detail likeds(precisiontest_t);
  // métadonnées techniques
  audit likeds(audit_t);
end-ds;

// ========================================
// api publique - procédures exportées
// ========================================

///
// Liste des opératinons supportées
//
dcl-enum precisiontest_listeAction qualified;
  creation 'create';
  modification 'update';
  suppression 'delete';
  consultation 'read';
end-enum;


// ========================================
"
`;

exports[`DSL Validation and Error Handling - Sprint 01 > should handle string length variations 1`] = `
"
-- ============================================
-- Table for entity: StringTest
-- Generated by CMagic v1.0
-- ============================================
CREATE TABLE STRINGTESTP (
    ID INTEGER NOT NULL,
    SHORTCODE VARCHAR(5),
    STANDARDNAME VARCHAR(50),
    LONGDESCRIPTION VARCHAR(1000),
    DEFAULTSTRING VARCHAR(256),
    
    -- Technical metadata
    CREATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (ID)
);

-- Indexes for frequent searches

-- Comments
COMMENT ON TABLE STRINGTESTP IS 'Table for StringTest - Generated by CMagic';
COMMENT ON COLUMN STRINGTESTP.ID IS 'id field';
COMMENT ON COLUMN STRINGTESTP.SHORTCODE IS 'shortCode field';
COMMENT ON COLUMN STRINGTESTP.STANDARDNAME IS 'standardName field';
COMMENT ON COLUMN STRINGTESTP.LONGDESCRIPTION IS 'longDescription field';
COMMENT ON COLUMN STRINGTESTP.DEFAULTSTRING IS 'defaultString field';


-- ============================================
-- Foreign Key Constraints
-- ============================================

"
`;

exports[`DSL Validation and Error Handling - Sprint 01 > should handle string length variations 2`] = `
"**free
// ============================================
// stringtest headers - générée par cmagic v1.0
// source : test.cmagic  
// génération reproductible : aucune date volatile
// ============================================

/if defined(stringtest_h_defined)       
/eof                               
/endif                             
/define stringtest_h_defined  
/// ============================================
// includes standard
/// ============================================
/include 'cmagic.rpgleinc'
/include 'global.rpgleinc'
/include 'sqlstates.rpginc'
/include 'llist/llist_h.rpgle'
/include 'ckool.rpgleinc'


// structure audit réutilisable
dcl-ds audit_t qualified template;
  createdat timestamp;
  createdby char(10);
  updatedat timestamp;
  updateby char(10);
end-ds;


///========================================
// structures entité
///========================================

///
// structure de base stringtest (données métier)
///
dcl-ds stringtest_t qualified template;
  id INT(10);
  shortcode VARCHAR(5);
  standardname VARCHAR(50);
  longdescription VARCHAR(1000);
  defaultstring VARCHAR(256);
end-ds;

///
// structure pour clé primaire
///
dcl-ds stringtest_id_t qualified template;
  id INT(10);
end-ds;

///
// structure détaillée stringtest (avec métadonnées techniques)
///
dcl-ds stringtest_detail_t qualified template;
  // données métier héritées de stringtest_t
  detail likeds(stringtest_t);
  // métadonnées techniques
  audit likeds(audit_t);
end-ds;

// ========================================
// api publique - procédures exportées
// ========================================

///
// Liste des opératinons supportées
//
dcl-enum stringtest_listeAction qualified;
  creation 'create';
  modification 'update';
  suppression 'delete';
  consultation 'read';
end-enum;


// ========================================
"
`;

exports[`DSL Validation and Error Handling - Sprint 01 > should validate required field constraints 1`] = `
"
-- ============================================
-- Table for entity: StrictEntity
-- Generated by CMagic v1.0
-- ============================================
CREATE TABLE STRICTENTITYP (
    ID INTEGER NOT NULL,
    MANDATORYCODE VARCHAR(10) NOT NULL,
    OPTIONALFIELD VARCHAR(50),
    
    -- Technical metadata
    CREATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    UPDATED_AT TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (ID)
);

-- Indexes for frequent searches

-- Comments
COMMENT ON TABLE STRICTENTITYP IS 'Table for StrictEntity - Generated by CMagic';
COMMENT ON COLUMN STRICTENTITYP.ID IS 'id field';
COMMENT ON COLUMN STRICTENTITYP.MANDATORYCODE IS 'mandatoryCode field';
COMMENT ON COLUMN STRICTENTITYP.OPTIONALFIELD IS 'optionalField field';


-- ============================================
-- Foreign Key Constraints
-- ============================================

"
`;
